# quantumsand

./: .gitignore  LICENSE  README.md
quantumsand-project-templates/: .gitignore  README.md  main.py  pyproject.toml
quantumsand-project-templates/quantumsand-project-templates-dicom2nifti/: README.md  quantumsand-project-template-dicom2nifti-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-geopandas/: README.md  quantumsand-project-template-geopandas-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-jax/: README.md  quantumsand-project-template-jax-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-matplotlib/: README.md  quantumsand-project-template-matplotlib-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-nibabel/: README.md  quantumsand-project-template-nibabel-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-numpy/: README.md  quantumsand-project-template-numpy-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-pandas/: README.md  quantumsand-project-template-pandas-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-pillow/: README.md  quantumsand-project-template-pillow-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-pydicom/: README.md  quantumsand-project-template-pydicom-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-pytorch/: README.md  quantumsand-project-template-pytorch-001.ipynb  quantumsand-project-template-pytorch-002.ipynb
quantumsand-project-templates/quantumsand-project-templates-rdkit/: README.md  quantumsand-project-template-rdkit-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-redis-rs/: README.md  quantumsand-project-template-redis-rs-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-requests/: README.md  quantumsand-project-template-requests-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-reqwest/: README.md  quantumsand-project-template-reqwest-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-resources/: README.md  tcpdump_rails_api_localhost.pcap
quantumsand-project-templates/quantumsand-project-templates-scapy/: README.md  quantumsand-project-template-scapy-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-scikit-learn/: README.md  quantumsand-project-template-scikit-learn-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-scipy/: README.md  quantumsand-project-template-scipy-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-seaborn/: README.md  quantumsand-project-template-seaborn-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-simpleitk/: README.md  quantumsand-project-template-simpleitk-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-sqlalchemy/: README.md  quantumsand-project-template-sqlalchemy-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-sympy/: README.md  quantumsand-project-template-sympy-001.ipynb
quantumsand-project-templates/quantumsand-project-templates-tensorflow/: README.md  quantumsand-project-template-tensorflow-001.ipynb
quantumsand-qt/: .gitignore  CMakeLists.txt  LICENSE  README.md  macos.main.qml  main.cpp  main.qml  qml.qrc  vars.js
(+334 files in other folders)
