[project]
name = "quantumsand-project-templates"
version = "0.1.0"
description = "Pre-configured sample projects with prefetched dependencies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pydicom>=3.0.2",
    "tf-nightly>=2.22.0.dev20260524",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
