[project]
name = "quantumsand-project-templates"
version = "0.1.0"
description = "Pre-configured sample projects with prefetched dependencies"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dicom2nifti>=2.6.2",
    "geopandas>=1.1.3",
    "jax>=0.10.2",
    "matplotlib>=3.10.9",
    "nibabel>=5.4.2",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pydicom>=3.0.2",
    "rdkit>=2026.3.3",
    "requests>=2.34.2",
    "scapy>=2.7.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "simpleitk>=2.5.5",
    "sqlalchemy>=2.0.51",
    "tf-nightly>=2.22.0.dev20260524",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.64",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
